# superseedr

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: installers-v2.yml  installers-v3.yml  integration-cluster-cli.yml  integration-interop.yml  rust.yml  temp-windows-exe.yml
agentic_plans/: client_diagnostics_full_implementation_plan_2026-05-01.md  dht_global_planner_budget_plan_2026-04-24.md  dht_resumable_crawls_plan_2026-04-19.md  dht_soak_keep_after_discard_2026-04-23.md  peer_transport_abstraction_plan_2026-05-13.md
docs/: CHANGELOG.md  ROADMAP.md  cli.md  configuration-and-backups.md  fuzzing.md  shared-config.md  synthetic-benchmark.md
fuzz/: Cargo.toml
fuzz/dictionaries/: dht_lifecycle_reduce.dict  krpc_compact_decode.dict  krpc_message_decode.dict  krpc_query_roundtrip.dict  tcp_message_parse.dict  tcp_message_roundtrip.dict  torrent_file_parse.dict  torrent_info_parse.dict  utp_packet_decode.dict  utp_packet_roundtrip.dict
fuzz/fuzz_targets/: dht_lifecycle_reduce.rs  krpc_compact_decode.rs  krpc_message_decode.rs  krpc_query_roundtrip.rs  tcp_message_parse.rs  tcp_message_roundtrip.rs  torrent_file_parse.rs  torrent_info_parse.rs  utp_packet_decode.rs  utp_packet_roundtrip.rs
integration_tests/: README.md  run_libtorrent_lab.sh
integration_tests/harness/clients/: qbittorrent.py
integration_tests/harness/tests/: test_stub_adapters.py
integration_tests/libtorrent_lab/: .dockerignore  README.md  __init__.py  peer.py  run.py
integration_tests/libtorrent_lab/docker/: Dockerfile.peer  Dockerfile.superseedr  docker-compose.libtorrent-lab.yml
integration_tests/libtorrent_lab/scenarios/: basic_ul_dl.json  basic_ul_dl_dht_lsd_enabled.json  basic_ul_dl_tcp_only.json  basic_ul_dl_utp_only.json  libtorrent_dual_stack_to_superseedr_all.json  libtorrent_to_superseedr.json  libtorrent_to_superseedr_hybrid_nested.json  libtorrent_to_superseedr_tcp_fanout.json  libtorrent_to_superseedr_v1_nested.json  libtorrent_utp_to_superseedr.json  superseedr_all_to_libtorrent_dual_stack.json  superseedr_to_libtorrent.json  superseedr_to_libtorrent_tcp_fanout.json  superseedr_to_libtorrent_v1_multi_file.json  superseedr_to_libtorrent_v2_multi_file.json  superseedr_utp_to_libtorrent.json
integration_tests/libtorrent_lab/tests/: test_runner.py
packaging/windows/: superseedr-user.iss
scripts/: build_osx_universal_dmg.sh  build_windows_user_installer.ps1  dht_replay_diff.ps1  fuzz_seed_corpus.py  fuzz_smoke.sh  summarize_dht_soak.py
src/: app.rs  command.rs  config.rs  control_service.rs  dht_service.rs  dht_stub.rs  errors.rs  fs_atomic.rs  fuzzing.rs  lib.rs  logging.rs  main.rs  resource_manager.rs  storage.rs  synthetic_load.rs  token_bucket.rs  torrent_identity.rs  watch_inbox.rs
src/dht/: anomaly.rs  bep42.rs  bootstrap.rs  health.rs  inbound.rs  krpc.rs  lookup.rs  mod.rs  peer_store.rs  persist.rs  public_addr.rs  routing.rs  scheduler.rs  service.rs  test_support.rs  token.rs  transport.rs  types.rs
src/dht/service/: api.rs  api_tests.rs  command_tests.rs  commands.rs  driver.rs  driver_tests.rs  effects.rs  fuzzing.rs  lifecycle_tests.rs  monitor_tests.rs  planner.rs  planner_tests.rs  replay_tests.rs  runtime.rs  runtime_command_replay_tests.rs  runtime_effect_tests.rs  state.rs  state_tests.rs  status.rs  status_tests.rs  subscriber_tests.rs  test_support.rs
src/dht/service/planner/: drain.rs  drain_tests.rs  reducer_tests.rs  replay_tests.rs  selection.rs  selection_tests.rs  test_support.rs  types.rs
src/dht/service/state/: demand_command.rs  mod.rs  service.rs
src/integrations/: cli.rs  control.rs  status.rs
src/networking/: mod.rs  protocol.rs  session.rs  shared_udp.rs  transport.rs  utp.rs
src/persistence/: event_journal.rs
src/telemetry/: ui_telemetry.rs
src/torrent_manager/: manager.rs  mod.rs  piece_manager.rs  state.rs
src/tracker/: client.rs
src/tui/: README.md  action_style.rs  app_command.rs  effects.rs  events.rs  formatters.rs  mod.rs  tree.rs  view.rs
src/tui/layout/: browser.rs  common.rs  normal.rs
src/tui/screens/: browser.rs  config.rs  delete_confirm.rs  help.rs  input_panel.rs  journal.rs  mod.rs  normal.rs  power.rs  rss.rs  torrents.rs  welcome.rs
src/tuning/: mod.rs
